// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster Actions Dropdown Items admin console url does not exist should render (no console) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="undefined.menu.adminconsole"
    title="Open console"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
    title="Edit display name"
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editconsoleurl"
    onClick={[Function]}
    title="Add console URL"
  >
    Add console URL
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster configuration_mode read_only should render (read_only) 1`] = `
<Fragment>
  <DropdownItem
    component="a"
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noopener noreferrer"
    target="_blank"
    title="Open console"
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editdisplayname"
    onClick={[Function]}
    title="Edit display name"
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.scalecluster"
    title="Edit load balancers and persistent storage"
    tooltip={
      <span>
        This operation is not available during maintenance
      </span>
    }
  >
    Edit load balancers and persistent storage
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.editnodecount"
    title="Edit node count"
    tooltip={
      <span>
        This operation is not available during maintenance
      </span>
    }
  >
    Edit node count
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.hibernatecluster"
    title="Hibernate cluster"
    tooltip={
      <span>
        This operation is not available during maintenance
      </span>
    }
  >
    Hibernate cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.deletecluster"
    title="Delete cluster"
    tooltip={
      <span>
        This operation is not available during maintenance
      </span>
    }
  >
    Delete cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster state hibernating should render (hibernating) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.adminconsole"
    title="Open console"
    tooltip={
      <span>
        This cluster is hibernating; resume cluster in order to perform actions
      </span>
    }
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editdisplayname"
    onClick={[Function]}
    title="Edit display name"
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.scalecluster"
    title="Edit load balancers and persistent storage"
    tooltip={
      <span>
        This cluster is hibernating; resume cluster in order to perform actions
      </span>
    }
  >
    Edit load balancers and persistent storage
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.editnodecount"
    title="Edit node count"
    tooltip={
      <span>
        This cluster is hibernating; resume cluster in order to perform actions
      </span>
    }
  >
    Edit node count
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.hibernatecluster"
    onClick={[Function]}
    title="Resume from Hibernation"
  >
    Resume from Hibernation
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.deletecluster"
    title="Delete cluster"
    tooltip={
      <span>
        This cluster is hibernating; resume cluster in order to perform actions
      </span>
    }
  >
    Delete cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state not ready should render (not ready) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.adminconsole"
    title="Open console"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editdisplayname"
    onClick={[Function]}
    title="Edit display name"
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.scalecluster"
    title="Edit load balancers and persistent storage"
    tooltip={
      <span>
        This cluster is not ready
      </span>
    }
  >
    Edit load balancers and persistent storage
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.editnodecount"
    title="Edit node count"
    tooltip={
      <span>
        This cluster is not ready
      </span>
    }
  >
    Edit node count
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.hibernatecluster"
    title="Hibernate cluster"
    tooltip={
      <span>
        This cluster is not ready
      </span>
    }
  >
    Hibernate cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.deletecluster"
    onClick={[Function]}
    title="Delete cluster"
  >
    Delete cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state ready and console url and product osdtrial should render 1`] = `
<Fragment>
  <DropdownItem
    component="a"
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noopener noreferrer"
    target="_blank"
    title="Open console"
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editdisplayname"
    onClick={[Function]}
    title="Edit display name"
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.scalecluster"
    onClick={[Function]}
    title="Edit load balancers and persistent storage"
  >
    Edit load balancers and persistent storage
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editnodecount"
    onClick={[Function]}
    title="Edit node count"
  >
    Edit node count
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.upgradetrialcluster"
    onClick={[Function]}
    title="Upgrade cluster from Trial"
  >
    Upgrade cluster from Trial
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.deletecluster"
    onClick={[Function]}
    title="Delete cluster"
  >
    Delete cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state ready and console url should render 1`] = `
<Fragment>
  <DropdownItem
    component="a"
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noopener noreferrer"
    target="_blank"
    title="Open console"
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editdisplayname"
    onClick={[Function]}
    title="Edit display name"
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.scalecluster"
    onClick={[Function]}
    title="Edit load balancers and persistent storage"
  >
    Edit load balancers and persistent storage
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.editnodecount"
    onClick={[Function]}
    title="Edit node count"
  >
    Edit node count
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.hibernatecluster"
    onClick={[Function]}
    title="Hibernate cluster"
  >
    Hibernate cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    key="1.menu.deletecluster"
    onClick={[Function]}
    title="Delete cluster"
  >
    Delete cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items cluster with state uninstalling should render (uninstalling) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.adminconsole"
    title="Open console"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.editdisplayname"
    title="Edit display name"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.scalecluster"
    title="Edit load balancers and persistent storage"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Edit load balancers and persistent storage
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.editnodecount"
    title="Edit node count"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Edit node count
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.hibernatecluster"
    title="Hibernate cluster"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Hibernate cluster
  </DropdownItem>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="1.menu.deletecluster"
    title="Delete cluster"
    tooltip={
      <span>
        The cluster is being uninstalled
      </span>
    }
  >
    Delete cluster
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items read only cluster should render correctly 1`] = `
<Fragment>
  <DropdownItem
    component="a"
    href="www.testuhc.com"
    key="1.menu.adminconsole"
    rel="noopener noreferrer"
    target="_blank"
    title="Open console"
  >
    Open console
  </DropdownItem>
</Fragment>
`;

exports[`Cluster Actions Dropdown Items self managed cluster should render (self managed) 1`] = `
<Fragment>
  <DropdownItem
    component="button"
    isAriaDisabled={true}
    key="undefined.menu.adminconsole"
    title="Open console"
    tooltip={
      <span>
        Admin console is not yet available for this cluster
      </span>
    }
  >
    Open console
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editdisplayname"
    onClick={[Function]}
    title="Edit display name"
  >
    Edit display name
  </DropdownItem>
  <DropdownItem
    component="button"
    key="undefined.menu.editconsoleurl"
    onClick={[Function]}
    title="Add console URL"
  >
    Add console URL
  </DropdownItem>
</Fragment>
`;
